# arstudio

./: .gitignore  .gitmodules  .travis.yml  README.md
data/: ny0.txt
doc/: cvdbg.asta
docs/: Doxyfile
git-hooks/: README  README.md  gnu-indent.cfg  install-hooks.sh  pre-commit
src/: CMakeLists.txt  algo_pipeline.cpp  algo_pipeline.cpp.in  algo_pipeline.hpp  camera.cpp  camera.hpp  config.cpp  config.hpp  config_view.cpp  config_view.hpp  core.cpp  core.hpp  cvdbg.cpp  doxygen_dummy.hpp  logger.cpp  logger.hpp  main.cpp  pipeline.cpp  pipeline.hpp  point3d.cpp  point3d.hpp  qml-files.qrc  repository.cpp  repository.hpp  repository_view.cpp  repository_view.hpp  scenegraph.cpp  scenegraph.h  scenegraph.hpp  scenegraph_selector.cpp  scenegraph_selector.hpp  sequence.cpp  sequence.hpp  timeline.cpp  timeline.hpp  timeline_model.cpp  timeline_model.hpp  timelinemodel.cpp  timelinemodel.hpp  video.cpp  (+3 more)
src/AlgoPipeline/: AlgoInterface.hpp  AlgoPipeline.hpp  AlgoPipeline.hpp.in  AlgorithmFactory.hpp
src/AlgoPipeline/private/: AlgoPipeline.cpp  AlgoPipeline.cpp.in  AlgorithmFactory.cpp
src/BitmapView/: BitmapView.hpp
src/BitmapView/private/: BitmapView.cpp
src/Config/: Config.hpp
src/Config/private/: Config.cpp
src/ConfigEditor/: ConfigEditor.hpp
src/ConfigEditor/private/: ConfigEditor.cpp
src/ConfigView/: ConfigView.qml  qmldir
src/Core/: Core.hpp  Core.qml  MainMenuBar.qml  MainToolBar.qml
src/Core/private/: Core.cpp
src/CustomModel/: CustomModel.hpp
src/CustomModel/private/: CustomModel.cpp
src/IWManager/: IWManager.hpp
src/IWManager/private/: IWManager.cpp
src/ItemView/: ItemView.hpp
src/ItemView/private/: ItemView.cpp
src/Logger/: Logger.hpp
src/Logger/private/: Logger.cpp
src/ProcessingDialog/: ProcessingDialog.hpp  ProcessingDialog.qml  qmldir
src/ProcessingDialog/private/: ProcessingDialog.cpp  ProcessingDialog.cpp.in
src/ProcessingTool/: ProcessingTool.qml  qmldir
src/Repository/: Repository.hpp  RepositoryNode.hpp
src/Repository/private/: Repository.cpp
src/RepositoryIO/: RepositoryIO.hpp
src/RepositoryIO/private/: RepositoryIO.cpp
src/RepositoryView/: RepositoryView.hpp
src/RepositoryView/private/: RepositoryView.cpp
src/Scenegraph/: Scenegraph.hpp  ScenegraphAggregator.hpp
src/Scenegraph/private/: Scenegraph.cpp  ScenegraphAggregator.cpp
src/Sequence/: Bitmap.hpp  Camera.hpp  Point3D.hpp  PointCloud.hpp  Sequence.hpp
src/Sequence/private/: ItemImplementations.cpp  Point3d.cpp  Sequence.cpp
src/TimeLine/: TimeLine.hpp  TimeLine.qml  TimeLineModel.hpp  qmldir
src/TimeLine/private/: TimeLine.cpp  TimeLineModel.cpp
src/VideoHelper/: IVideoSource.hpp  VideoHelper.hpp  VideoSourceKinvideo.hpp  VideoSourceOpenCV.hpp
src/VideoHelper/private/: VideoHelper.cpp  VideoSourceKinvideo.cpp  VideoSourceOpenCV.cpp
src/VideoPipeline/: VideoPipeline.hpp
src/VideoPipeline/private/: VideoPipeline.cpp
src/Window2D/: Window2D.hpp
src/Window2D/private/: Window2D.cpp
src/Window3D/: Window3D.hpp
src/Window3D/private/: Window3D.cpp
src/WindowTool/: Axis.qml  ItemWindow.qml  ModelControls.qml  WindowHandler.qml  WindowTool.qml  qmldir
src/algorithms/: CMakeLists.txt  adjuster.cpp  adjuster.hpp  adjuster.xml  algo_interface.hpp
src/algorithms/adjuster/: CMakeLists.txt  adjuster.cpp  adjuster.hpp  default.ini  settings.xml
src/include/: algo_interface.hpp  algo_pipeline.hpp  algo_pipeline.hpp.in  bitmap.hpp  camera.hpp  config.hpp  logger.hpp  pcloud.hpp  repository.hpp  sequence.hpp
src/include/ui/: config_editor.hpp  config_view.hpp  core.hpp  processing_dialog.hpp  repository_view.hpp  timeline.hpp  timelinemodel.hpp  video.hpp  window2d.hpp  window3d.hpp
src/modules/: CMakeLists.txt  brightness.cpp  brightness.xml  contrast.cpp
src/plugins/: CMakeLists.txt  brightness.cpp
src/protobuf/: repository.proto
src/resources/: list.qrc
src/ui/: config_editor.cpp  core.cpp  main.cpp  processing_dialog.cpp  processing_dialog.cpp.in  repository_view.cpp  timeline.cpp  timelinemodel.cpp  window2d.cpp  window3d.cpp
submodules/adjuster/: CMakeLists.txt
travis-ci/: trusty.list
